// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows anchor links 1`] = `
<body>
  <a
    href="http://test.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    http://test.com
  </a>
</body>
`;

exports[`allows anchor tags and counts them correctly 1`] = `
"
    <div>
      <a href=\\"https://mozilla.org/\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">https://mozilla.org/</a>
      <a href=\\"https://mozilla.org/\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">https://mozilla.org/</a>
    </div>
  "
`;

exports[`allows blockquote 1`] = `
<body>
  <blockquote>
    bulleted list
  </blockquote>
</body>
`;

exports[`allows bolded tags 1`] = `
<body>
  A 
  <b>
    bolded comment!
  </b>
</body>
`;

exports[`allows bolded tags 2`] = `
<body>
  A 
  <strong>
    bolded comment!
  </strong>
</body>
`;

exports[`allows bulleted list 1`] = `
<body>
  <ul>
    <li>
      bulleted list
    </li>
  </ul>
</body>
`;

exports[`allows italic tags 1`] = `
<body>
  <em>
    italic!
  </em>
</body>
`;

exports[`allows italic tags 2`] = `
<body>
  <i>
    italic!
  </i>
</body>
`;

exports[`allows mailto links 1`] = `
<body>
  <a
    href="mailto:email@example.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    email@example.com
  </a>
</body>
`;

exports[`allows spoiler 1`] = `
<body>
  <span
    class="coral-rte-spoiler"
  >
    Spoiler
  </span>
</body>
`;

exports[`allows strikthrough 1`] = `
<body>
  <s>
    strikethrough
  </s>
</body>
`;

exports[`sanitizes out attributes not allowed 1`] = `
<body>
  <div>
    Test
  </div>
</body>
`;

exports[`sanitizes out tags not allowed 1`] = `<body />`;

exports[`sanitizes out tags not allowed 2`] = `<body />`;

exports[`sanitizes without features enabled 1`] = `
<body>
  
    
  <div>
    
      
    
      
    Strong
    
      
    Strong
    
      
    Italic
    
      
    Italic
    
      
    
      
    Blockquote
    
      
    Strike
    
      
    Spoiler
    
    
  </div>
  
  
</body>
`;
